@@ -11,8 +11,6 @@ import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 import java.time.Year;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * Parses fixed weekday relative to fixed date.
  */
@@ -29,7 +27,7 @@ public class FixedWeekdayRelativeToFixedParser implements HolidayParser {
         )
       )
       .map(holder -> new CreateHoliday(holder.getActualDate()).apply(holder.getDescribed()))
-      .collect(toList());
+      .toList();
   }
 }
 
